force-app/main/default/objects/Quote_Line_History_Tracking__c/Quote_Line_History_Tracking__c.object-meta.xml
<CustomObject>
    <description>used to capturre addition and deletion of quote line on quote</description>
    <label>Quote Line History Tracking</label>
    <nameField>
        <displayFormat>QLH-{0000}</displayFormat>
        <label>Quote Line History  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line History Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>