force-app/main/default/objects/Quote_Line_History_Tracking__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Quote Line History Trackings</relationshipLabel>
    <relationshipName>Quote_Line_History_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>