force-app/main/default/objects/Quote_Line_History_Tracking__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <label>Quote Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>