force-app/main/default/objects/Quote_Line_History_Tracking__c/fields/TImeStamp__c.field-meta.xml
<CustomField>
    <fullName>TImeStamp__c</fullName>
    <label>TImeStamp</label>
    <type>DateTime</type>
</CustomField>